--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="chuj.css">
+    <link rel="stylesheet" href="css-strona1.css">
 </head>
 <body>
     <section class="s1">
@@ -28,4 +28,5 @@
         <!--<div class="b"></div>-->
     </section>
 </body>
+
 </html>
