--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="css-strona1.css">
+    <link href="./css-strona1.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <section class="s1">
@@ -30,3 +30,4 @@
 </body>
 
 </html>
+
