--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="./css-strona1.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="css-strona1.css">
 </head>
 <body>
     <section class="s1">
@@ -28,6 +28,4 @@
         <!--<div class="b"></div>-->
     </section>
 </body>
-
 </html>
-
