Correct 'Crate Account' to 'Create Account'
Fixed typo in 'Create Account' heading.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </section>
     <section class="s2">
         <form>
-            <h2 class="bialy">Crate Accountgggggggg</h2>
+            <h2 class="bialy">Crate Account</h2>
             <p class="bialy">Full name </p>
             <input type="text" placeholder="Enter your full name" class="tloxd">
 
@@ -29,3 +29,4 @@
     </section>
 </body>
 </html>
+
