--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="css-strona1.css">
+    <link rel="stylesheet" type="text/css" href="css-strona1.css">
 </head>
 <body>
     <section class="s1">
@@ -29,4 +29,5 @@
     </section>
 </body>
 </html>
+
 
