--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <br>
             <input class="a" type="submit" value="Register">
             <br>
-            <p style="text-align: center;" class="bialy">Already have an account? <a href="chuj2.html" target="_blank"class="czerw">Login</a></p>
+            <p style="text-align: center;" class="bialy">Already have an account? <a href="Strona2.html" target="_blank"class="czerw">Login</a></p>
         </form>
     </section>
     <section class="s1">
@@ -29,5 +29,6 @@
     </section>
 </body>
 </html>
+
 
 
