Update Strona2.html to include header
Removed background image style and added a header.

--- a/Strona2.html
+++ b/Strona2.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
+<!DOCTYPE html
 <html lang="en">
 <head>
     <style>
-        body
-        {
-            background-image: url(JANOWSKI.jpg);
-        }
     </style>
 </head>
 <body>
-    
+    <h1>You have been logged</h1>
 </body>
+
 </html>
